--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#home">HOME</a>
                     </li>
-                    <li><a href="#about">WORDS</a>
+                    <li><a href="#about">THINGS</a>
                     </li>
                     <li><a href="#price-sec">EDUCATION</a>
                     </li>
